<resources>
    <string name="app_name">Alarm Panel</string>
    <string name="action_settings">Settings</string>
    <string name="action_publish">Publish</string>
    <string name="toast_code_match">Alarm code matches current code, enter a different code.</string>
    <string name="toast_code_alarm_set">Alarm has been set!</string>
    <string name="toast_code_unchanged">Alarm code unchanged!</string>
    <string name="toast_code_changed">Alarm code changed successfully!</string>
    <string name="toast_code_not_match">Code does not match, try again.</string>
    <string name="toast_code_invalid">Code is invalid, please try again.</string>
    <string name="text_enter_alarm_code_title">Enter a new alarm code</string>
    <string name="text_renter_alarm_code_title">Please enter the new code again to verify</string>
    <string name="preference_summary_security_code">Set the alarm system code (default is 1234).</string>
    <string name="preference_title_security_code">Security Code</string>
    <string name="preference_title_mqtt_server">MQTT Setup</string>
    <string name="preference_summary_mqtt_server">Set the values for the MQTT service</string>
    <string name="preference_title_broker">MQTT Broker</string>
    <string name="preference_summary_broker">Set MQTT broker service address. For tcp/ssl exclude the prefix (192.168.1.1). For others, include the prefix (http://192.168.1.1).</string>
    <string name="preference_client_id">Client Id</string>
    <string name="preference_summary_client_id">Set the client Id if required by service.</string>
    <string name="preference_tls_connection">SSL/TLS Connection</string>
    <string name="preference_summary_tls_connection">Listen to broker on port 8883 with SSL/TLS.</string>
    <string name="preference_title_port">Service Port</string>
    <string name="preference_summary_port">Set the service port value, usually 8123 unless secure.</string>
    <string name="preference_title_command_topic">Alarm Command</string>
    <string name="preference_title_state_topic">Alarm Topic</string>
    <string name="preference_summary_command_topic">Set the command topic value to send commands to the MQTT service.</string>
    <string name="preference_summary_state_topic">Set the state topic value to receive messages from the MQTT service.</string>
    <string name="preference_title_username">Username</string>
    <string name="preference_summary_username">Set the service username (if needed).</string>
    <string name="preference_title_password">Password</string>
    <string name="preference_summary_password">Set the service password (if needed).</string>
    <string name="preference_title_alarm">Alarm Settings</string>
    <string name="preference_mqtt_alarm">MQTT Settings</string>
    <string name="preference_summary_alarm">Alarm code settings</string>
    <string name="preference_title_pending_time">Pending Time</string>
    <string name="preference_summary_pending_time">The time in seconds before arming the alarm. Currently %1$s seconds.</string>
    <string name="preference_title_trigger_time">Trigger Time</string>
    <string name="preference_summary_trigger_time">The time in seconds before triggering the alarm. Currently %1$s seconds.</string>
    <string name="preference_title_weather_settings">Weather</string>
    <string name="preference_summary_weather_settings">Once activated, the weather settings will appear on the main screen.</string>
    <string name="preference_title_darksky">DarkSky</string>
    <string name="preference_summary_darksky">Activate the weather module using the DarkSky service.</string>
    <string name="preference_title_darksky_api">API Secret</string>
    <string name="preference_summary_darksky_api">Enter your DarkSky API secret.</string>
    <string name="preference_title_latitude">Latitude</string>
    <string name="preference_summary_latitude_summary">Edit the location latitude.</string>
    <string name="preference_title_longitude">Longitude</string>
    <string name="preference_summary_longitude_summary">Edit the location longitude.</string>
    <string name="preference_title_units">Use Celsius (°C)</string>
    <string name="preference_summary_units">Use celsius for temperature values.</string>
    <string name="preference_title_screen_saver_title">Screen Saver</string>
    <string name="preference_title_screen_saver_settings">Screen Saver Settings</string>
    <string name="preference_summary_screen_saver_settings">When active, uses a built-in clock screen saver.</string>
    <string name="preference_title_screen_saver">Clock Screen Saver</string>
    <string name="pref_title_image_client_id">Imgur Client Id</string>
    <string name="preference_summary_image_client_id">Enter the client id of the Imgur account from https://api.imgur.com.</string>
    <string name="preference_title_screen_saver_photo_settings">Photo Screen Saver Settings</string>
    <string name="preference_summary_screen_saver_photo_settings">When active, uses rotating Imgur images for the screen saver.</string>
    <string name="preference_title_screen_saver_photo">Image Screen Saver</string>
    <string name="preference_summary_screen_saver">Use rotating images from Instagram as screen saver.</string>
    <string name="preference_title_image_source">Imgur Tag</string>
    <string name="preference_summary_image_source">Enter an Imgur tag to use for images (example: space, architecture, flowers, or landscape).</string>
    <string name="preference_title_image_fit">Crop Images</string>
    <string name="preference_summary_image_fit">Crop the images to fit the screen size.</string>
    <string name="preference_title_image_rotation">Image Rotation Interval</string>
    <string name="preference_summary_image_rotation">Time in minutes between image refresh. Currently %1$s.</string>
    <string name="preference_title_web_settings">Home Automation</string>
    <string name="preference_summary_web_settings">Allows you to load external web page to access your home automation platform interface.</string>
    <string name="preference_title_web">Home Automation Page</string>
    <string name="preference_summary_web">Displays your home automation web page by swiping main screen.</string>
    <string name="preference_title_web_url">Platform Address</string>
    <string name="preference_summary_web_url">Enter the IP address of your home automation web page with prefix and port if needed (example: http://ipaddress:8123).</string>
    <string name="preference_web_description">This is an experimental feature. The web page is rendered with Android\'s version of the Chrome Browser and may render differently depending on your Android SDK and WebView versions.</string>
    <string name="preference_title_notification">Notifications</string>
    <string name="preference_summary_notification">Show a notification if the alarm is triggered.</string>
    <string name="preference_title_inactivity">Start screen saver after…</string>
    <string name="preference_summary_inactivity_seconds">After %1$s seconds of inactivity screen dims.</string>
    <string name="preference_summary_inactivity_minutes">After %1$s minute(s) of inactivity screen dims.</string>
    <string name="preference_title_notifications">Notifications</string>
    <string name="preference_title_mqtt_notifications">MQTT Notifications</string>
    <string name="preference_summary_mqtt_notifications">Display or speak notifications from MQTT messages.</string>
    <string name="preference_title_alert">Alert Notifications</string>
    <string name="preference_summary_alert">Use an alert dialog to show the notification content.</string>
    <string name="preference_tts_voice">TTS Voice</string>
    <string name="preference_tts">TTS Notifications</string>
    <string name="preference_summary_tts">Use Google Text-To-Speech to speak the alarmState value of an MQTT message.</string>
    <string name="preference_tts_topic">TTS Topic</string>
    <string name="preference_tts_topic_title">Set Topic Value</string>
    <string name="preference_tts_topic_summary">Example format for the message topic and alarmState to be spoken (note that externally powered speakers are required for TTS): \n\n"{'topic':'home/notification', 'alarmState':'Hello!'}"</string>
    <string name="preference_camera">Camera Capture</string>
    <string name="preference_camera_title">Camera Capture</string>
    <string name="preference_camera_summary">Use the camera to capture an image and email it when the alarm is disabled using the keypad.</string>
    <string name="preference_camera_flip_title">Rotate Camera</string>
    <string name="preference_camera_flip_summary">Depending on your camera, you may need to rotate or flip the camera. Currently %1$s.</string>
    <string name="preference_mail_domain">Domain</string>
    <string name="preference_mail_domain_summary">Enter your MailGun domain value (example: sandboxd83b1e242f934c73a471c518392df0.mailgun.org).</string>
    <string name="preference_mail_key">Api Key</string>
    <string name="preference_mail_key_summary">Enter your MailGun api key value (example: key-5d021926d65dc12we8ec04d7f9d0fd2c).</string>
    <string name="preference_mail_from">Mail From</string>
    <string name="preference_mail_from_summary">Enter an email address the email will be from (example: mister@thankmister.com).</string>
    <string name="preference_mail_to">Mail To</string>
    <string name="preference_mail_to_summary">Enter an email address to receive the image. You can use a comma to send to multiple addresses.((example: "mister@thankmister.com" or "mister@thankmister.com, me@thankmister.com")</string>
    <string name="preference_mail_title">Mail Gun Settings</string>
    <string name="preference_mail_description">To email captured images you need to setup a MailGun (mailgun.com) account and provide the domain name and api key, also enter the email address of the receipient.</string>
    <string name="text_title_system">SYSTEM</string>
    <string name="text_titled_disarmed">DISARMED</string>
    <string name="text_titled_armed_away">ARMED AWAY</string>
    <string name="toast_invalid_coordinates">Invalid latitude and longitude values.</string>
    <string name="toast_invalid_latitude">Value should be between -90 and 90.</string>
    <string name="toast_invalid_longitude">Value should be between -180 and 180.</string>
    <string name="toast_invalid_provider">Unable to detect location, please enter lat/long manually.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="toast_alarm_deactivated">Alarm deactivated!</string>
    <string name="activity_logs_title">Data Logs</string>
    <string name="text_arm_home">ARM HOME</string>
    <string name="text_arm_away">ARM AWAY</string>
    <string name="text_system">SYSTEM</string>
    <string name="text_disarmed">DISARMED</string>
    <string name="dialog_alarm_triggered">ENTER CODE TO DISMISS</string>
    <string name="dialog_first_time">Since this is your first time, please setup your device, MQTT server, and alarm information (the default alarm code is 1234).</string>
    <string name="text_alarm_pending">ALARM PENDING</string>
    <string name="text_f">°F</string>
    <string name="text_c">°C</string>
    <string name="text_temperature">%1$s %2$s</string>
    <string name="thanks_mister_title">Thanks, Mister!</string>
    <string name="designer_developer_text">Design and development</string>
    <string name="company_email">mister@thanksmister.com</string>
    <string name="pref_time_update_title">Update Time</string>
    <string name="pref_time_title">Time Settings</string>
    <string name="pref_automatic_time_zone_title">Automatic time zone</string>
    <string name="pref_automatic_time_zone_summary">Use network-provided time zone</string>
    <string name="pref_time_summary">Update the device time.</string>
    <string name="pref_time_format_title">Use 24-hour format</string>
</resources>