<!--
  ~ Copyright (c) 2016 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. 
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed 
  ~ under the License is distributed on an "AS IS" BASIS, 
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
  ~ See the License for the specific language governing permissions and 
  ~ limitations under the License.
  -->
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">
    
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center_horizontal">
            
            <ImageView
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:src="@drawable/ic_mister"/>
            
            <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
            
            <TextView
                    android:text="@string/designer_developer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.TextMedium"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"/>

            <TextView
                    android:text="@string/thanks_mister_title"
                    style="@style/TextAppearance.TextExtraLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:maxLines="2"/>

            <TextView
                    android:text="@string/company_email"
                    android:id="@+id/emailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.TextMedium.Blue"
                    android:maxLines="2"/>

            <TextView
                    android:id="@+id/versionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.TextSmall.Secondary"
                    android:maxLines="2"/>

        </LinearLayout>
    

</ScrollView>